# Spikive_Pointcloud

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
docker/: Dockerfile  build.sh  build_driver_ws.sh  ros_entrypoint.sh  run.sh
driver_ws/src/HBA/: CMakeLists.txt
driver_ws/src/HBA/include/: mypcl.hpp
driver_ws/src/Spikive-PGO/: CMakeLists.txt  package.xml
driver_ws/src/Spikive-PGO/config/: config_loop.yaml  config_pgo.yaml
driver_ws/src/Spikive-PGO/docs/: architecture.md  data_flow.md  pgo_loop.drawio
driver_ws/src/Spikive-PGO/include/: STDesc.cpp  STDesc.h  lsdc_tools.hpp
driver_ws/src/Spikive-PGO/launch/: std_loop.launch  std_pgo.launch
driver_ws/src/Spikive-PGO/rviz_cfg/: loop.rviz  pgo.rviz
driver_ws/src/Spikive-PGO/src/: file_preprocess.hpp  std_loop.cpp  std_pgo.cpp
driver_ws/src/Spikive-SLAM/: CMakeLists.txt  package.xml
driver_ws/src/Spikive-SLAM/Lsdc_Repub/: init_pose.txt
driver_ws/src/Spikive-SLAM/config/: config.yaml  config_avia.yaml  config_mid360.yaml  config_mid70.yaml  config_s10u.yaml  config_s10u_mavros.yaml  config_velodyne.yaml  velodyne.yaml
driver_ws/src/Spikive-SLAM/docs/: architecture.md  coordinate_frames.md  data_flow.md  slam_system.drawio
driver_ws/src/Spikive-SLAM/include/: common_lib.h  lsdc_geo.hpp  lsdc_math.hpp  lsdc_tools.hpp  odom_struct.hpp
driver_ws/src/Spikive-SLAM/include/Commons/: LocalGeographicCS.hpp  transfer.hpp
driver_ws/src/Spikive-SLAM/launch/: cxzn_arrange.launch  cxzn_arrange_velodyne.launch  localization.launch  mapping_livox.launch  mapping_s10u.launch  mapping_s10u_mavros.launch  mapping_velodyne.launch  save_result.launch
driver_ws/src/Spikive-SLAM/msg/: bywire_chassis_state.msg
driver_ws/src/Spikive-SLAM/rviz_cfg/: loam_livox.rviz  localization.rviz
driver_ws/src/Spikive-SLAM/src/LIO/: IMU_Processing.hpp  laserMapping.cpp  pcl_preprocess.hpp  preprocess.cpp  preprocess.h  save_result.cpp
driver_ws/src/Spikive-SLAM/src/RTK/: repub_gnss.cpp  rtk2pose.cpp
driver_ws/src/Spikive-SLAM/src/localization/: flight_controller.cpp  fusion_repub.cpp  global_match.cpp
driver_ws/src/Spikive-SLAM/src/preprocess/: ins_preprocess.cpp  pcl_struct.hpp  rs_to_velodyne.cpp
driver_ws/src/spikive_pipeline/: CMakeLists.txt  package.xml
driver_ws/src/spikive_pipeline/config/: drone_2_guangzhou_pipeline.yaml  pointcloud_process_config.yaml  sweep_drone2_pgo_balanced.yaml  sweep_drone2_pgo_current.yaml  sweep_drone2_pgo_dense_strict.yaml  sweep_drone2_pgo_global_safe.yaml  sweep_drone2_pgo_global_safe_hba3.yaml
driver_ws/src/spikive_pipeline/launch/: drone_2_guangzhou_pipeline.launch
driver_ws/src/spikive_pipeline/scripts/: drone_2_guangzhou_pipeline.py
scripts/: run_drone_2_guangzhou_pipeline.sh
tools/groundtruth_eval/: README.md  evaluate_groundtruth.py  groundtruth_eval.yaml
