<?xml version="1.0"?>
<package format="2">
  <name>spikive_pipeline</name>
  <version>0.1.0</version>
  <description>Single-path orchestration for Spikive PGO and HBA on recorded SLAM bags.</description>

  <maintainer email="colman@example.com">colman</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>lsdc_pgo</exec_depend>
  <exec_depend>hba</exec_depend>

  <export>
  </export>
</package>
